mini-micro-blog/infra/k8s/eventbus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
      - name: eventbus
        image: fadygamil/eventbus-svc
        ports:
        - containerPort: 9002
---
apiVersion: v1
kind: Service
metadata:
  name: eventbus-srv
spec:
  type: ClusterIP
  selector:
    app: eventbus
  ports:
  - name: eventbus
    protocol: TCP
    port: 9002 # to access the service 
    targetPort: 9002 # to access the pod
